--- a/ProjetEvent/MenuViewController.xib
+++ b/ProjetEvent/MenuViewController.xib
@@ -12,7 +12,6 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MenuViewController" customModule="ProjetEvent" customModuleProvider="target">
             <connections>
                 <outlet property="mainView" destination="i5M-Pr-FkT" id="DfQ-Ve-DJ2"/>
-                <outlet property="shareBtn" destination="tE7-c5-KVq" id="4T3-Mz-dJP"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -24,24 +23,14 @@
                     <rect key="frame" x="96" y="90" width="182" height="36"/>
                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                     <state key="normal" title="Share the app">
-                        <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="titleColor" red="0.048979922279999998" green="0.0076440927210000001" blue="0.043904799090000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </state>
                     <connections>
                         <action selector="share:" destination="-1" eventType="touchUpInside" id="fwM-LG-PQg"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="252" verticalCompressionResistancePriority="753" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PhF-ig-m8S">
-                    <rect key="frame" x="96" y="166" width="182" height="36"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                    <state key="normal" title="Give a ratting">
-                        <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </state>
-                    <connections>
-                        <action selector="ratting:" destination="-1" eventType="touchUpInside" id="HiN-iH-KLO"/>
-                    </connections>
-                </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ukQ-X5-f7q">
-                    <rect key="frame" x="96" y="242" width="182" height="44"/>
+                    <rect key="frame" x="96" y="262" width="182" height="36"/>
                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                     <state key="normal" title="Events">
                         <color key="titleColor" red="0.048979922279999998" green="0.0076440927210000001" blue="0.043904799090000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -51,10 +40,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="252" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ijU-uG-253">
-                    <rect key="frame" x="96" y="326" width="182" height="36"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="36" id="VJr-40-Ffp"/>
-                    </constraints>
+                    <rect key="frame" x="96" y="348" width="182" height="36"/>
                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                     <state key="normal" title="Profile">
                         <color key="titleColor" red="0.048979922279999998" green="0.0076440927210000001" blue="0.043904799090000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -63,28 +49,31 @@
                         <action selector="profile:" destination="-1" eventType="touchUpInside" id="bfv-4z-b9b"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tE7-c5-KVq" customClass="FBSDKShareButton">
-                    <rect key="frame" x="164" y="404" width="46" height="30"/>
-                    <state key="normal" title="Button"/>
+                <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="252" verticalCompressionResistancePriority="753" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PhF-ig-m8S">
+                    <rect key="frame" x="96" y="176" width="182" height="36"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                    <state key="normal" title="Give a ratting">
+                        <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </state>
+                    <connections>
+                        <action selector="ratting:" destination="-1" eventType="touchUpInside" id="HiN-iH-KLO"/>
+                    </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="0.85699379280821919" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="p1S-eB-T04" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="96" id="3u6-kp-8TD"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="PhF-ig-m8S" secondAttribute="trailing" constant="97" id="7Ku-VX-tDI"/>
-                <constraint firstItem="ukQ-X5-f7q" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="96" id="8Xq-Ne-PeE"/>
-                <constraint firstItem="ijU-uG-253" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="96" id="9p6-Wj-9wn"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="ijU-uG-253" secondAttribute="bottom" constant="305" id="AZX-77-ot5"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="ukQ-X5-f7q" secondAttribute="trailing" constant="97" id="HMp-Vc-P7i"/>
-                <constraint firstItem="tE7-c5-KVq" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Ibv-e8-Lfe"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="p1S-eB-T04" secondAttribute="trailing" constant="97" id="Joa-RV-l9O"/>
-                <constraint firstItem="PhF-ig-m8S" firstAttribute="top" secondItem="p1S-eB-T04" secondAttribute="bottom" constant="40" id="PV9-WO-XZ6"/>
-                <constraint firstItem="ukQ-X5-f7q" firstAttribute="top" secondItem="PhF-ig-m8S" secondAttribute="bottom" constant="40" id="QE6-j2-jAe"/>
-                <constraint firstItem="tE7-c5-KVq" firstAttribute="top" secondItem="ijU-uG-253" secondAttribute="bottom" constant="42" id="bLk-fA-MMR"/>
-                <constraint firstItem="ijU-uG-253" firstAttribute="top" secondItem="ukQ-X5-f7q" secondAttribute="bottom" constant="40" id="fcA-4l-eQY"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="ijU-uG-253" secondAttribute="trailing" constant="97" id="hZW-Rh-1W5"/>
-                <constraint firstItem="PhF-ig-m8S" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="96" id="vQ4-zy-k1d"/>
-                <constraint firstItem="p1S-eB-T04" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="70" id="xJo-rR-Dcm"/>
+                <constraint firstItem="p1S-eB-T04" firstAttribute="trailing" secondItem="PhF-ig-m8S" secondAttribute="trailing" id="Bns-mk-nH2"/>
+                <constraint firstItem="ukQ-X5-f7q" firstAttribute="top" secondItem="PhF-ig-m8S" secondAttribute="bottom" constant="50" id="MbG-8S-b7G"/>
+                <constraint firstItem="PhF-ig-m8S" firstAttribute="top" secondItem="p1S-eB-T04" secondAttribute="bottom" constant="50" id="Ovv-VS-zZf"/>
+                <constraint firstItem="PhF-ig-m8S" firstAttribute="leading" secondItem="ukQ-X5-f7q" secondAttribute="leading" id="aYd-50-R3O"/>
+                <constraint firstItem="ijU-uG-253" firstAttribute="top" secondItem="ukQ-X5-f7q" secondAttribute="bottom" constant="50" id="cT1-fj-Cz2"/>
+                <constraint firstItem="PhF-ig-m8S" firstAttribute="trailing" secondItem="ukQ-X5-f7q" secondAttribute="trailing" id="hKP-LU-R75"/>
+                <constraint firstItem="p1S-eB-T04" firstAttribute="leading" secondItem="PhF-ig-m8S" secondAttribute="leading" id="j5a-Qf-KVp"/>
+                <constraint firstItem="p1S-eB-T04" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="lJe-FO-n7l"/>
+                <constraint firstItem="p1S-eB-T04" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="96" id="lNC-5q-KEp"/>
+                <constraint firstItem="ukQ-X5-f7q" firstAttribute="trailing" secondItem="ijU-uG-253" secondAttribute="trailing" id="mH1-FG-1pd"/>
+                <constraint firstItem="p1S-eB-T04" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="70" id="yKd-TX-2eQ"/>
+                <constraint firstItem="ukQ-X5-f7q" firstAttribute="leading" secondItem="ijU-uG-253" secondAttribute="leading" id="ytj-Kk-vXd"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="33.5" y="132.5"/>
