--- a/ProjetEvent/EventViewController.xib
+++ b/ProjetEvent/EventViewController.xib
@@ -26,12 +26,13 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="MPc-B9-SJU"/>
+                        <outlet property="delegate" destination="-1" id="bbY-mr-Vfv"/>
                     </connections>
                 </tableView>
                 <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UoJ-wY-gZZ">
                     <rect key="frame" x="0.0" y="17" width="375" height="44"/>
                     <items>
-                        <navigationItem title="Title" id="bAP-ad-k8J">
+                        <navigationItem title="Project Event" id="bAP-ad-k8J">
                             <barButtonItem key="leftBarButtonItem" title="Menu" id="Bsh-He-vpO">
                                 <connections>
                                     <action selector="menu:" destination="-1" id="Hsj-Id-aLo"/>
