--- a/ProjetEvent/ShareViewController.xib
+++ b/ProjetEvent/ShareViewController.xib
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ShareViewController" customModule="ProjetEvent" customModuleProvider="target">
             <connections>
-                <outlet property="mainView" destination="i5M-Pr-FkT" id="v5R-kl-Xmp"/>
+                <outlet property="mainView" destination="i5M-Pr-FkT" id="99Z-pE-lY8"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -27,7 +27,7 @@
                         <navigationItem title="Title" id="CRT-UJ-6d8">
                             <barButtonItem key="leftBarButtonItem" title="Menu" id="rbu-K3-RYi">
                                 <connections>
-                                    <action selector="menu:" destination="-1" id="z1w-dV-9ky"/>
+                                    <action selector="menu:" destination="-1" id="fcL-Yg-jHe"/>
                                 </connections>
                             </barButtonItem>
                         </navigationItem>
