--- a/ProjetEvent/profile/ProfileViewController.xib
+++ b/ProjetEvent/profile/ProfileViewController.xib
@@ -112,7 +112,7 @@
                             <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <textInputTraits key="textInputTraits"/>
+                            <textInputTraits key="textInputTraits" textContentType="tel"/>
                             <connections>
                                 <action selector="txtEditingChange:" destination="-1" eventType="editingDidEnd" id="42f-kb-gsz"/>
                                 <outlet property="delegate" destination="-1" id="XxJ-N7-iyx"/>
