--- a/ProjetEvent/ShareViewController.xib
+++ b/ProjetEvent/ShareViewController.xib
@@ -4,6 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ShareViewController" customModule="ProjetEvent" customModuleProvider="target">
             <connections>
-                <outlet property="mainView" destination="i5M-Pr-FkT" id="v5R-kl-Xmp"/>
+                <outlet property="view" destination="i5M-Pr-FkT" id="GZW-zV-5zQ"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
