delete some constraints

--- a/ProjetEvent/profile/ProfileViewController.xib
+++ b/ProjetEvent/profile/ProfileViewController.xib
@@ -144,19 +144,23 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="mn4-Jj-4RF" secondAttribute="bottom" constant="569" id="2vw-us-S8h"/>
                 <constraint firstItem="mn4-Jj-4RF" firstAttribute="centerY" secondItem="Bwq-w2-llJ" secondAttribute="centerY" id="4R7-cl-ugF"/>
                 <constraint firstItem="ad6-Vn-nOj" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="5kN-50-kcN"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="ad6-Vn-nOj" secondAttribute="bottom" priority="250" constant="248" id="Dqn-EE-fFL"/>
+                <constraint firstItem="mn4-Jj-4RF" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="Hyi-ov-b9Q"/>
                 <constraint firstItem="27C-2S-luZ" firstAttribute="top" secondItem="Bwq-w2-llJ" secondAttribute="bottom" constant="33" id="LOL-Ux-atD"/>
                 <constraint firstItem="4iD-rf-3NS" firstAttribute="top" secondItem="27C-2S-luZ" secondAttribute="bottom" constant="26" id="Oub-zg-MUk"/>
                 <constraint firstItem="Bwq-w2-llJ" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="TCV-GZ-LhR"/>
                 <constraint firstItem="do3-zH-KGt" firstAttribute="top" secondItem="4iD-rf-3NS" secondAttribute="bottom" constant="26" id="TSy-68-rto"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="mn4-Jj-4RF" secondAttribute="trailing" constant="270" id="UEu-Be-fGA"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="ad6-Vn-nOj" secondAttribute="trailing" constant="16" id="XfJ-Ke-NQb"/>
                 <constraint firstItem="27C-2S-luZ" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="154" id="Xrh-nP-VL7"/>
                 <constraint firstItem="4iD-rf-3NS" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="afU-oP-Qxh"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="4iD-rf-3NS" secondAttribute="trailing" constant="16" id="bIQ-ey-Ayt"/>
                 <constraint firstItem="27C-2S-luZ" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="crw-KH-ohV"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="27C-2S-luZ" secondAttribute="trailing" constant="16" id="d82-lr-VnX"/>
+                <constraint firstItem="mn4-Jj-4RF" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="38" id="eCV-7e-GM5"/>
                 <constraint firstItem="do3-zH-KGt" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="eOG-6c-cod"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="do3-zH-KGt" secondAttribute="trailing" constant="16" id="mWE-8a-rB9"/>
                 <constraint firstItem="ad6-Vn-nOj" firstAttribute="top" secondItem="do3-zH-KGt" secondAttribute="bottom" constant="26" id="tR3-Iw-gAF"/>
